--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -5,6 +5,15 @@
     {
         Response.Redirect("~/Account/Login");
     }
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
+}
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
@@ -166,15 +175,15 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.DevExpress().DateEditFor(q=> q.info_persona.pe_fechaNacimiento, settings =>
-                            {
-                                settings.Name = "pe_fechaNacimiento";
-                                settings.Properties.UseMaskBehavior = true;
-                                settings.Properties.EditFormat = EditFormat.Date;
-                                settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                            }).GetHtml()
+                                @Html.DevExpress().DateEditFor(q => q.info_persona.pe_fechaNacimiento, settings =>
+                           {
+                               settings.Name = "pe_fechaNacimiento";
+                               settings.Properties.UseMaskBehavior = true;
+                               settings.Properties.EditFormat = EditFormat.Date;
+                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           }).GetHtml()
                                 @Html.ValidationMessageFor(q => q.info_persona.pe_fechaNacimiento, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -249,10 +258,11 @@
 
             <div role="tabpanel" class="tab-pane" id="tb_info_laboral">
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="IdDivision">División*</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdDivision, settings =>
+                    <div class="col-md-12">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdDivision">División*</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdDivision, settings =>
                                {
                                    settings.Name = "IdDivision";
                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
@@ -269,14 +279,14 @@
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_division).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdDivision, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.IdDivision, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="IdArea">Área*</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdArea, settings =>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdArea">Área*</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdArea, settings =>
                                {
                                    settings.Name = "IdArea";
                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
@@ -293,14 +303,14 @@
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_area).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdArea, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.IdArea, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="IdDepartamento">Departamento*</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdDepartamento, settings =>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdDepartamento">Departamento*</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdDepartamento, settings =>
                                {
                                    settings.Name = "IdDepartamento";
                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
@@ -317,14 +327,14 @@
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_departamento).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdDepartamento, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.IdDepartamento, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="IdCargo">Cargo*</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdCargo, settings =>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdCargo">Cargo*</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdCargo, settings =>
                                {
                                    settings.Name = "IdCargo";
                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
@@ -341,14 +351,14 @@
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_cargo).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdCargo, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.IdCargo, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="IdPuntoCargo">Punto cargo</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdPuntoCargo, settings =>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdPuntoCargo">Punto cargo</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdPuntoCargo, settings =>
                                {
                                    settings.Name = "IdPunto_cargo";
                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
@@ -365,14 +375,14 @@
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_punto_cargo).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdPuntoCargo, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.IdPuntoCargo, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="IdEmpleado_Supervisor">Jefe inmediato</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdEmpleado_Supervisor, settings =>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdEmpleado_Supervisor">Jefe inmediato</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdEmpleado_Supervisor, settings =>
                                {
                                    settings.Name = "IdEmpleado_Supervisor";
                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
@@ -389,11 +399,13 @@
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_empleado).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdEmpleado_Supervisor, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.IdEmpleado_Supervisor, "", new { @class = "text-danger" })
+                            </div>
                         </div>
                     </div>
-                </div>
             </div>
+        </div>
+
 
 
             <div role="tabpanel" class="tab-pane" id="tb_info_nomina">
