--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
@@ -5,6 +5,7 @@
     {
         Response.Redirect("~/Account/Login");
     }
+    if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
             <h4>
@@ -12,9 +13,10 @@
             </h4>
         </div>
     }
-}
     Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
+
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
 @using (Html.BeginForm("Anular", "Empleado", FormMethod.Post, new { @class = "form", @role = "form" }))
