--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
@@ -658,7 +658,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "Persona", new { Area ="General" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "Empleado", new { Area ="General" }, null)">Cancelar</a>
     </div>
 
     @section Scripts {
