--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -15,6 +15,7 @@
         get_info_termino_pago();
         GetUltimoDocumento();
         ValidarGrid();
+        ValidarCliente();
         $("#vt_tipo_venta").change(function () {
             get_info_termino_pago();
             CargarCuotas();
