--- a/ERP/Core.Erp.Web/Views/Account/LoginEmpresa.cshtml
+++ b/ERP/Core.Erp.Web/Views/Account/LoginEmpresa.cshtml
@@ -47,8 +47,7 @@
                 </div>
                 
                 <div class="form-group has-feedback">
-                    @Html.HiddenFor(q=>q.IdEmpresa)
-                    @Html.DropDownListFor(q=> q.IdEmpresa,new SelectList(ViewBag.lst_empresas,"IdEmpresa", "em_nombre"),new { @class = "form-control", @disabled = "disabled"})
+                    @Html.DropDownListFor(q=> q.IdEmpresa,new SelectList(ViewBag.lst_empresas,"IdEmpresa", "em_nombre"),new { @class = "form-control", @id = "IdEmpresa"})
                 </div>
 
                 <div class="form-group has-feedback">
