--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/Modificar.cshtml
@@ -39,7 +39,7 @@
             <div class="col-md-9">
                 <div class="form-group" id="div_admin">
                     <label for="contrasena_admin">Contraseña Administrador</label>
-                    @Html.PasswordFor(q => q.contrasena_admin, new { @class = "form-control", @id = "contrasena_admin" })
+                    @Html.TextBoxFor(q => q.contrasena_admin, new { @class = "form-control", @id = "contrasena_admin" })
                 </div>
             </div>
             <div class="col-md-3">
