--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/Nuevo.cshtml
@@ -45,7 +45,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="">Contraseña</label>
-                    @Html.PasswordFor(q => q.Contrasena, new { @class = "form-control", @id = "contrasenia_usuario" })
+                    @Html.TextBoxFor(q => q.Contrasena, new { @class = "form-control", @id = "contrasenia_usuario" })
                 </div>
             </div>
         </div>
