--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoOrdenPago/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoOrdenPago/Modificar.cshtml
@@ -159,7 +159,7 @@
     </div>
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","CodigoSRI", new { IdTipoSRI = ViewBag.IdTipoSRI, Area ="CuentasPorPagar" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "TipoOrdenPago", new { Area ="CuentasPorPagar" }, null)">Cancelar</a>
     </div>
 
     @section Scripts {
