--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/PartidaArancelaria/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/PartidaArancelaria/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Partida arancelaria";
+    ViewBag.Title = "Partidas arancelarias";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
