--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/_GridViewPartial_venta_activo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/_GridViewPartial_venta_activo.cshtml
@@ -87,7 +87,16 @@
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
         });
         settings.Columns.Add("Concepto_Vta", "Observación").Width = System.Web.UI.WebControls.Unit.Percentage(60);
-        settings.Columns.Add("Estado", "Estado").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
         settings.Columns.Add(column =>
         {
             column.SetDataItemTemplateContent(c =>
