--- a/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/_GridViewPartial_cuentas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/_GridViewPartial_cuentas.cshtml
@@ -83,7 +83,16 @@
         settings.Columns.Add("IdBanco", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("ba_descripcion", "Descripción").Width = Unit.Percentage(40);
         settings.Columns.Add("ba_Num_Cuenta", "Número de cuenta").Width = Unit.Percentage(20);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
