--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/_GridViewPartial_talonario_cheque.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/_GridViewPartial_talonario_cheque.cshtml
@@ -82,7 +82,16 @@
         settings.Columns.Add("IdBanco", "Código").Width = Unit.Percentage(8);
         settings.Columns.Add("ba_descripcion", "Descripción").Width = Unit.Percentage(30);
         settings.Columns.Add("Num_cheque", "Número cheque").Width = Unit.Percentage(20);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(8);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Estado_bool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
