--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoNotaBanco/_GridViewPartial_tipo_nota.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoNotaBanco/_GridViewPartial_tipo_nota.cshtml
@@ -84,7 +84,16 @@
         settings.Columns.Add("IdTipoNota", "Código").Width = Unit.Percentage(15);
         settings.Columns.Add("Tipo", "Tipo").Width = Unit.Percentage(15);
         settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(60);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
