--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/_GridViewPartial_categoria_activo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/_GridViewPartial_categoria_activo.cshtml
@@ -82,7 +82,16 @@
         settings.Columns.Add("IdCategoriaAF", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("CodCategoriaAF", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(70);
-        settings.Columns.Add("Estado", "Estado").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
