--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RevalorizacionActivo/_GridViewPartial_rev_activo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RevalorizacionActivo/_GridViewPartial_rev_activo.cshtml
@@ -88,7 +88,16 @@
         });
         settings.Columns.Add("Id_Tipo", "Tipo").Width = System.Web.UI.WebControls.Unit.Percentage(20);
         settings.Columns.Add("Motivo", "Motivo").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-        settings.Columns.Add("Estado", "Estado").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
         settings.Columns.Add(column =>
         {
             column.SetDataItemTemplateContent(c =>
