--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/_GridViewPartial_tipoactivo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/_GridViewPartial_tipoactivo.cshtml
@@ -82,8 +82,16 @@
 
         settings.Columns.Add("CodActivoFijo", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
         settings.Columns.Add("Af_Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(60);
-        settings.Columns.Add("Estado", "Estado").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
         settings.Columns.Add(column =>
         {
             column.Caption = "Categoría";
