--- a/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/_GridViewPartial_caja.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/_GridViewPartial_caja.cshtml
@@ -82,7 +82,16 @@
         settings.Columns.Add("ca_Codigo", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("ca_Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("IdUsuario_Responsable", "Responsable").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add("Estado", "Estado").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
