--- a/ERP/Core.Erp.Web/Areas/Caja/Views/TipoMovimientoCaja/_GridViewPartial_tipomovimientocaja.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/TipoMovimientoCaja/_GridViewPartial_tipomovimientocaja.cshtml
@@ -81,7 +81,16 @@
         settings.Columns.Add("tm_Signo", "Signo").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("tm_descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(40);
         settings.Columns.Add("IdCtaCble", "Cta. Cble").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add("Estado", "Estado").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
